<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="aboutDialog_title">Градски транспорт, България (версия 1.30)</string>
    
<string name="app_name">Градски транспорт, България</string>
<string name="buttonOk">ОК</string>
<string name="buttonCancel">Отказ</string>
<string name="error_retrieveEstimates_generic" formatted="false">Няма Интернет свързаност? Грешка при извличане на информация за разписанието за спирка %s (%s)</string>
<string name="error_retrieveEstimates_noInfo" formatted="false">&lt;b&gt;В момента СКГТ не предоставя информация за спирка &amp;quot;%s&amp;quot; (код: %s), моля опитайте пак по-късно.&lt;/b&gt;</string>
<string name="error_retrieveEstimates_matching_noInfo">Няма информация</string>
<string name="error_retrieveEstimates_noBusStop" formatted="false">&lt;b&gt;Спирката %s (%s) вече не съществува.&lt;/b&gt;</string>
<string name="error_retrieveEstimates_matching_noBusStop">Няма намерена информация</string>

<string name="progressDialog_message_estimating">Извличане на времена на пристигане</string>
<string name="progressDialog_message_stations">Търсене на спирки</string>
<string name="progressDialog_title">Моля изчакайте</string>
<string name="menu_about">За програмата</string>
<string name="menu_settings">Настройки</string>
<string name="menu_help">Помощ</string>

<string name="aboutDialog_content">Показва времената на пристигане на превозните средства на градския транспорт в София и Варна.\n\nПроектът е с отворен код, за повече информация: http://sofia-public-transport-navigator.googlecode.com</string>
<string name="aboutDialog_market">Ако приложението Ви е от полза може да гласувате за него тук: &lt;a href=&quot;market://details?id=eu.tanov.android.sptn&quot;&gt;Android market&lt;/a&gt;</string>
<string name="aboutDialog_legal">\nАвтор: Пламен Танов\n\nДанните за времената на пристигане се извличат от http://m.sofiatraffic.bg и http://varnatraffic.com\n\nИзползвате програмата на собствена отговорност. Използвайки програмата споделяте анонимно статистика.</string>
    
<string name="helpDialog_title">Помощ</string>
<string name="helpDialog_content">Изберете точка на картата или използвайте вашите текущи координати.\nСлед това изберете спирка и вижте времената на пристигане.\nМоже да натиснете върху номера на линията (тя е ЛИНК) за да видите разписанието й.</string>

<string name="settings_category_stations_info">Информация за спирки</string>
<string name="settings_mapSatellite_title">Сателитна карта</string>
<string name="settings_mapStreetView_title">Улици</string>
<string name="settings_mapTraffic_title">Трафик</string>
<string name="settings_showRemainingTime_title">Оставащо време</string>
<string name="settings_showRemainingTime_summary">(или час на пристигане)</string>

<string name="settings_disableStatistics_title">Помагай за развиването на приложението</string>
<string name="settings_disableStatistics_summary">(споделяйки анонимна статистика за ползването на приложението)</string>

<string name="legal_sumc_html" formatted="false">&lt;p class=&quot;legal&quot;&gt;(взети от m.sumc.bg)&lt;/p&gt;</string>
<string name="legal_varnatraffic_html" formatted="false">&lt;p class=&quot;legal&quot;&gt;(взети от varnatraffic.com)&lt;/p&gt;</string>
<string name="format_estimates_dialog_title" formatted="false">%s: %s (%s)</string>
<string name="remainingTime_format_onlyMinutes" formatted="false">~%dм.</string>
<string name="remainingTime_format_minutesAndHours" formatted="false">~%dч.%dм.</string>

<string name="varnatraffic_estimates_table_header" formatted="false"><![CDATA[<thead><tr><th>№</th><th>след</th><th>на</th><th>разп.</th></tr></thead>]]></string>
<string name="varnatraffic_schedule_table_header" formatted="false"><![CDATA[<thead><tr><th>№</th><th>разписание</th></tr></thead>]]></string>
<string name="varnatraffic_alreadyLeft" >заминал</string>
<string name="varnatraffic_noData" >Няма данни</string>


<string name="settings_category_map">Карта</string>
<string name="settings_mapCompass_title">Компас</string>
<string name="settings_mapCompass_summary">Покажи стрелка с посока на гледане</string>

<string name="settings_directionPositionInRight_title">Направлението в дясно от време на пристигане</string>
<string name="settings_directionPositionInRight_summary">Или в дясно или под време на пристигане</string>
<string name="settings_directionSize_title">Големина на шрифт на направление</string>
<string name="settings_directionSize_summary">По-малко от 1 - скрива направление</string>

<string name="settings_category_other">Допълнителни настройки</string><string name="settings_whatsNewNotifications_title">Уведомяване за промените</string>

<string name="settings_whatsNewNotifications_summary">Еднократно активира различни екрани с помощни съобщения за промените</string>
<string name="settings_whatsNewShowVersion1_06_title">Версия 1.06</string>
<string name="settings_whatsNewShowVersion1_06_summary">Линк към разписание и в коя посока е спирката</string>

<string name="settings_whatsNewShowVersion1_09_title">Версия 1.09</string>
<string name="settings_whatsNewShowVersion1_09_estimates_summary" formatted="false">Бутон \'В избрани\' и \'Обнови\' в прозореца с времена на пристигане</string>
<string name="settings_whatsNewShowVersion1_09_favorities_summary">Списък с избрани спирки</string>

<string name="settings_whatsNewShowVersion1_10_title">Версия 1.10</string>
<string name="settings_whatsNewShowVersion1_10_startupScreenFavorities_summary" formatted="false">Опция за избор на начален екран - карта или \'Избрани спирки\' (в \'Настройки\')</string>

<string name="settings_whatsNewShowVersion1_17_title">Версия 1.17</string>
<string name="settings_whatsNewShowVersion1_17_tixbg_summary" formatted="false">Интеграция с tix.bg (От [MENU&gt;Задръствания/маршрути])</string>
    
<string name="settings_whatsNewShowVersion1_20_title">Версия 1.20</string>
<string name="settings_whatsNewShowVersion1_20_searchByBusStopId_summary" formatted="false">Търсене по номер на спирка (От [MENU&gt;По номер на спирка])</string>

<string name="favorities_empty_list" formatted="false">Няма избрани спирки. За да добавите такава - използвайте бутона \'В избрани\' от прозореца с времена на пристигане на съответната спирка.</string>
<string name="menu_favoroties">Избрани спирки</string>
<string name="menu_favoroties_up">Нагоре</string>
<string name="menu_favoroties_down">Надолу</string>
<string name="menu_favoroties_remove">Премахни от избрани</string>
<string name="info_removedFromFavorities" formatted="false">Спирката е премахната от избрани: %s (%s)</string>

<string name="buttonAddToFavorities">В избрани</string>
<string name="info_addedToFavorities" formatted="false">Спирката е успешно добавена в избрани: %s (%s)</string>
<string name="menu_favoroties_rename">Преименувай</string>
<string name="buttonRefreshEstimates">Обнови</string>
<string name="versionChanges_1_09_favorities_text">За времената на пристигане натиснете върху избраната спирка, за други действия (преименуване, местене, изтриване) задръжте върху съответната спирка и използвайте желаната опция от менюто.</string>
<string name="versionChanges_1_09_favorities_title">Как да работим с избрани спирки</string>
<string name="versionChanges_1_10_startupScreen_text" formatted="false">От [MENU&gt;Настройки&gt;\'Избрани спирки\' за начален екран] можете да укажете списъкът с избрани спирки да се показва при стартиране на приложението (вместо картата)</string>
<string name="versionChanges_1_10_startupScreen_title">Избор на начален екран</string>
<string name="versionChanges_1_17_startupScreen_text" formatted="false">От [MENU&gt;Задръствания/маршрути] може да видите задръстванията в София  и да намерите маршрут с градския транспорт (използва се Tix.bg)</string>
<string name="versionChanges_1_17_startupScreen_title">Задръствания/маршрути (Tix.bg)</string>
<string name="versionChanges_1_20_startupScreen_text" formatted="false">От [MENU&gt;По номер на спирка] имате възможност да видите времената на пристигане на превозните средства по въведен номер на спирка (специални благодарности на Дено за идеята ;) ).\nАко приложението Ви е от полза може да гласувате за него тук: &lt;a href=&quot;market://details?id=eu.tanov.android.sptn&quot;&gt;Android market&lt;/a&gt;</string>
<string name="versionChanges_1_20_startupScreen_title">Търсене по номер на спирка</string>
<string name="settings_category_common">Общи</string>
<string name="settings_commonStartupScreenFavorities_title" formatted="false">\'Избрани спирки\' за начален екран</string>
<string name="settings_commonStartupScreenFavorities_summary">Екран с избрани спирки или карта</string>
<string name="favorities_null_label">Без име - натисни и задръж за преименуване</string>
<string name="captcha_dialog_title">Captcha</string>
<string name="captcha_dialog_label">СКГТ явно не иска да популяризира градския транспорт като улесни пътниците и за това са сложили CAPTCHA. Нека бъдат живи и здрави!\nАко това не Ви харесва може да се обадите на телефоните им или да им напишете писмо и по този начин заедно да променим това отношение. Благодаря предварително!\n\nМоля, въведете текста от изображението:</string>
<string name="menu_tixbg">Задръствания/маршрути</string>
<string name="tixbg_info_return">За да се върнете натиснете BACK</string>
<string name="tixbg_install">Инсталирайте Tix.bg, след което натиснете BACK и отново изберете опцията от менюто ("Задръствания/маршрути")</string>
<string name="menu_searchByBusStopId">По номер на спирка</string>
<string name="searchByBusStopId_dialogTitle">Търсене по номер на спирка</string>
<string name="searchByBusStopId_dialogContent">Моля, въведете номер на спирка</string>
<string name="searchByBusStopId_dialog_badBusStopID">Грешно въведен номер на спирка - моля, въведете цифри</string>

<string name="settings_commonUserLocaleEnglish_title">Use English language</string>
<string name="settings_commonUserLocaleEnglish_summary">(или български език)</string>
<string name="settings_changeLocale_restart">Restarting in order to apply new language</string>

<string name="update_busstop_toast_update_success">Бяха изтеглени данни за нови спирки</string>
<string name="update_busstop_toast_update_failure">Възникна проблем при изтеглянето на данните за новите спирки</string>

<string name="update_busstop_dialog_dataconnection_title">Нови спирки</string>
<string name="update_busstop_dialog_dataconnection_text">Желаете ли да обновите информацията за местоположението на спирките? Ще бъде използван трафик от плана Ви за мобилни данни. Можете да го направите и по-късно, когато ползвате WIFI.</string>

</resources>
