<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/settings_category_map">
		<!--
			<ListPreference android:title="@string/settings_mapType_title"
			android:summary="@string/settings_mapType_summary"
			android:key="mapType" android:defaultValue="1"
			android:entries="@array/mapTypes"
			android:entryValues="@array/mapTypes_values" />
		-->
		<CheckBoxPreference android:key="mapSatellite"
			android:title="@string/settings_mapSatellite_title"
			android:defaultValue="false" />

		<CheckBoxPreference android:key="mapStreetView"
			android:title="@string/settings_mapStreetView_title"
			android:defaultValue="true" />
		<CheckBoxPreference android:key="mapTraffic"
			android:title="@string/settings_mapTraffic_title"
			android:defaultValue="false" android:summary="@string/settings_mapTraffic_summary" />
		<CheckBoxPreference android:key="mapCompass"
			android:title="@string/settings_mapCompass_title"
			android:defaultValue="true" android:summary="@string/settings_mapCompass_summary" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/settings_category_stations_info">

		<CheckBoxPreference android:key="showRemainingTime"
			android:title="@string/settings_showRemainingTime_title"
			android:defaultValue="true" android:summary="@string/settings_showRemainingTime_summary" />

		<CheckBoxPreference android:key="directionPositionInRight"
			android:title="@string/settings_directionPositionInRight_title"
			android:defaultValue="true" android:summary="@string/settings_directionPositionInRight_summary" />

		<EditTextPreference android:key="directionSize"
			android:title="@string/settings_directionSize_title"
			android:defaultValue="2" android:summary="@string/settings_directionSize_summary"
		    android:numeric="integer" android:maxLength="2"
			/>

<!-- 
		<PreferenceScreen android:title="@string/settings_advanced_title">
			<CheckBoxPreference android:key="useHtml"
				android:title="@string/settings_useHtml_title" android:defaultValue="true"
				android:summary="@string/settings_useHtml_summary" />
			<!- -
				TODO where to get DB from: <EditTextPreference
				android:dialogTitle="EditTextTitle"
				android:dialogMessage="EditTextMessage"
				android:dependency="Main_Option" android:key="pref_dialog"
				android:title="SomeTitle" android:summary="Summary"
				android:defaultValue="test" />
			- ->

		</PreferenceScreen>
 -->
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/settings_category_other">

		<PreferenceScreen android:title="@string/settings_whatsNewNotifications_title"
			android:summary="@string/settings_whatsNewNotifications_summary">
			<CheckBoxPreference android:key="whatsNewShowVersion1_06"
				android:title="@string/settings_whatsNewShowVersion1_06_title"
				android:defaultValue="true"
				android:summary="@string/settings_whatsNewShowVersion1_06_summary" />
		</PreferenceScreen>
	</PreferenceCategory>
</PreferenceScreen>